--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Luciano Scaminaci - Frontend Developer. Welcome to my personal portfolio webpage showcasing my skills, projects, and experience in web development."
+    />
     <title>Luciano Scaminaci</title>
   </head>
   <body>
